--- a/apiGet.html
+++ b/apiGet.html
@@ -2,16 +2,28 @@
 <html>
 <body>
 
-<h1>The FaceTouch API Test</h1>
+<h1>FaceTouch.com Test API</h1>
 
-<button type="button" onclick="loadDoc()">Request data</button>
+<!-- <button type="button" onclick="loadDoc()">Request data</button> -->
 
 <p id="demo"></p>
 
 
 <script>
+	var duration = 5000,
+    interval = 200,
+    intervalTimer;
+
+intervalTimer = setInterval(function() {
+    loadDoc();
+}, interval);
+
+setTimeout(function() {
+    clearInterval(intervalTimer);
+}, duration);
+
 function loadDoc() {
-  var xhttp = new XMLHttpRequest();
+  var xhttp = new XDomainRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
       document.getElementById("demo").innerHTML = this.responseText;
